Created a wifiHandler that can interact with the backend, cant get and post positions trough a simple async interface

--- a/ConanApp/.gitignore
+++ b/ConanApp/.gitignore
@@ -119,3 +119,4 @@ app/build/intermediates/transforms/
 app/build/intermediates/validate_signing_config/
 app/build/outputs/apk/
 app/build/tmp/
+.idea/saveactions_settings.xml
