--- a/ConanApp/app/src/main/AndroidManifest.xml
+++ b/ConanApp/app/src/main/AndroidManifest.xml
@@ -13,7 +13,13 @@
         android:theme="@style/AppTheme"
         tools:ignore="ExtraText">
 
-        <activity android:name=".MainActivity">
+
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait"
+            android:configChanges="keyboard|keyboardHidden|orientation"
+            tools:ignore="LockedOrientationActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
