--- a/ConanApp/local.properties
+++ b/ConanApp/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed Apr 01 00:25:12 CEST 2020
-sdk.dir = C\:\\Users\\Alfred\\AppData\\Local\\Android\\Sdk
+sdk.dir = C\:\\Users\\Elias\\AppData\\Local\\Android\\Sdk
