Added session view and class

--- a/ConanApp/local.properties
+++ b/ConanApp/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Apr 01 00:25:12 CEST 2020
-sdk.dir = C\:\\Users\\Elias\\AppData\\Local\\Android\\Sdk
+#Thu Apr 30 11:56:16 CEST 2020
+sdk.dir=C\:\\Users\\Robert\\AppData\\Local\\Android\\Sdk
