bluetooth message changes

--- a/ConanApp/local.properties
+++ b/ConanApp/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Fri May 01 19:28:14 CEST 2020
-sdk.dir=C\:\\Users\\Alfred\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\Elias\\AppData\\Local\\Android\\Sdk
