fixed backend bugs

--- a/ConanApp/local.properties
+++ b/ConanApp/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Apr 30 11:56:16 CEST 2020
-sdk.dir=C\:\\Users\\Robert\\AppData\\Local\\Android\\Sdk
+#Mon May 11 17:44:02 CEST 2020
+sdk.dir=C\:\\Users\\Alfred\\AppData\\Local\\Android\\Sdk
